# listTodo

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Cargo.toml
backend/migrations/001_init/: up.sql
backend/migrations/002_start_date/: down.sql  up.sql
backend/migrations/003_project_kind/: down.sql  up.sql
backend/migrations/004_user_role/: up.sql
backend/migrations/006_server_settings/: up.sql
backend/migrations/007_user_settings/: up.sql
backend/migrations/008_user_bg/: down.sql  up.sql
backend/migrations/009_user_effects/: down.sql  up.sql
backend/migrations/010_cleanup_orphaned/: down.sql  up.sql
backend/migrations/init/: down.sql  up.sql
backend/src/: auth.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  schema.rs
backend/src/handlers/: auth.rs  project.rs  server.rs  sync.rs  tag.rs  task.rs  user.rs
backend/tests/: api_integration_test.rs  api_test.rs  integration_test.rs
frontend/: .env.example  CHANGELOG.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  store.ts  sync.ts  types.ts
frontend/src/api/: agent.ts  client.ts
frontend/src/components/: AISummary.tsx  AuthPage.tsx  CalendarView.tsx  DateTimePicker.tsx  GanttView.tsx  MatrixView.tsx  SettingsPanel.tsx  Sidebar.tsx  TaskDetail.tsx  TaskItem.tsx  TaskList.tsx  TitleBar.tsx
frontend/src/db/: index.ts  indexeddb.ts  tauri.ts  types.ts
shared/: Cargo.toml
shared/src/: lib.rs
shared/tests/: type_tests.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
