[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
shared = { path = "../shared"}

axum = "0.8.9"
tokio = {version = "1",features = ["full"]}
tower-http = { version = "0.6", features= ["cors", "trace", "set-header", "limit"] }

serde = {version = "1",features = ["derive"]}
serde_json = "1"

diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.2"
r2d2 = "0.8"

uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dotenvy = "0.15"
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
bcrypt = "0.16"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
