[package]
name = "rinotodo-tauri"
version = "2026.529.0"
edition = "2021"

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
